# scribe

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/scribe/: __init__.py  _markitdown.py  api.py  cli.py  enhance.py  normalize.py  result.py
src/scribe/backends/: columns.py  csv.py  docx.py  fallback.py  layout.py  pdf.py  pptx.py  xlsx.py
tests/: make_fixtures.py  test_api_dispatch.py  test_cli.py  test_columns.py  test_docx.py  test_enhance.py  test_fallback.py  test_layout.py  test_licenses.py  test_normalize.py  test_pdf.py  test_pptx.py  test_sheets.py  test_ugly.py
tests/corpus/: SOURCES.md
