[project]
name = "scribe-md"
version = "0.2.0"
description = "The best MIT, no-LLM document-to-Markdown converter (PDF/Word/PPTX/Excel)."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "GIA - Universidad de La Habana" }]
dependencies = [
    "pdfplumber>=0.11.9",
    "python-docx>=1.1.2",
    "python-pptx>=1.0.2",
    "openpyxl>=3.1.5",
    "markitdown>=0.1.5",
]

[project.optional-dependencies]
# Opt-in VLM enhancement for scanned PDFs (scribe.enhance_pdf). The core never
# imports these; install only if you want AI-assisted grounded correction.
llm = ["httpx>=0.28", "pypdfium2>=4"]

[project.scripts]
scribe = "scribe.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/scribe"]

[dependency-groups]
dev = ["pytest>=8.0", "ruff>=0.6", "reportlab>=4.2"]

[tool.pytest.ini_options]
testpaths = ["tests"]
